--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
+    "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-foundry": "^1.0.2",
@@ -51,7 +52,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.4.0",
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -64,7 +65,7 @@
     "cross-env": "^7.0.3",
     "esbuild": "^0.17.19",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.8",
+    "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "^1.10.7",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -84,7 +85,7 @@
     "lint-staged": "^13.2.3",
     "npm-package-json-lint": "^6.4.0",
     "npm-package-json-lint-config-default": "^5.0.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "prettier": "^2.8.8",
     "release-it": "^15.11.0",
     "rimraf": "^5.0.1",
@@ -95,7 +96,7 @@
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
     "vercel": "^28.20.0",
-    "viem": "^1.2.10",
+    "viem": "^1.2.11",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0",
     "vitest-solidity-coverage": "^0.1.3"
