--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,7 +19,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.8",
+    "@lightdotso/ui": "workspace:*",
+    "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,8 +32,8 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "autoprefixer": "10.4.14",
-    "postcss": "8.4.24",
-    "tailwindcss": "3.3.2",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
