--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -32,10 +32,10 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "10.4.14",
-    "postcss": "8.4.24",
-    "tailwindcss": "3.3.2",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
-    "vite": "^4.3.9"
+    "vite": "^4.4.2"
   },
   "publishConfig": {
     "access": "public"
