--- a/configurations/tailwindcss/package.json
+++ b/configurations/tailwindcss/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lightdotso/tailwindcss",
   "version": "1.0.1",
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
   "bugs": {
     "url": "https://github.com/LightDotSo/LightDotSo/issues"
@@ -25,9 +25,10 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "tailwind-config-viewer": "^1.7.2",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   }
 }
