--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@release-it/keep-a-changelog": "^3.1.0",
+    "@swc/core": "^1.3.68",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
@@ -93,6 +94,7 @@
     "sort-package-json": "^1.57.0",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
+    "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
     "vercel": "^28.20.0",
