--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,13 +12,14 @@
   },
   "license": "GPL-3.0",
   "author": "Light, Inc.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/**"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "clean": "rimraf -rf dist"
   },
   "dependencies": {
