--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,12 @@
     { "pattern": "configurations/*/" },
     { "pattern": "packages/*/" }
   ],
+  // From: https://github.com/joe-bell/cva/discussions/85#discussioncomment-5014769
   "tailwindCSS.experimental.classRegex": [
-    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
-    ["cn\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
-  ]
+    // enable autocomplete in cx(...)
+    ["cx\\(((?:[^()]|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+    // enable autocomplete in cva(...)
+    ["cva\\(((?:[^()]|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
+  ],
+  "tailwindCSS.experimental.configFile": "configurations/tailwindcss/src/index.js"
 }
