--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,6 +19,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lightdotso/styles": "workspace:*",
     "@lightdotso/ui": "workspace:*",
     "next": "^13.4.9",
     "react": "^18.2.0",
