--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -21,6 +21,7 @@
     "diff": "shadcn-ui diff"
   },
   "dependencies": {
+    "@lightdotso/styles": "workspace:*",
     "@lightdotso/utils": "workspace:*",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
