--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -27,14 +27,14 @@
   "devDependencies": {
     "@lightdotso/tailwindcss": "workspace:*",
     "@tauri-apps/cli": "^1.4.0",
-    "@types/node": "^18.16.19",
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "10.4.14",
+    "@vitejs/plugin-react": "^4.0.2",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5",
+    "typescript": "^5.1.6",
     "vite": "^4.4.2"
   },
   "publishConfig": {
