--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -56,22 +56,22 @@
     "@storybook/channel-websocket": "^7.0.26",
     "@storybook/client-api": "^7.0.26",
     "@storybook/mdx2-csf": "^1.1.0",
-    "@storybook/preview-api": "7.0.0-alpha.54",
+    "@storybook/preview-api": "7.0.26",
     "@storybook/preview-web": "^7.0.26",
     "@storybook/react": "^7.0.26",
     "@storybook/react-vite": "^7.0.26",
-    "@storybook/testing-library": "0.0.14-next.2",
-    "@types/node": "^17.0.45",
+    "@storybook/testing-library": "0.2.0",
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
     "shadcn-ui": "^0.3.0",
     "storybook": "^7.0.26",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5",
-    "unist-builder": "^3.0.1",
-    "unist-util-visit": "^4.1.2",
+    "typescript": "^5.1.6",
+    "unist-builder": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
     "vite": "^4.0.4"
   },
   "peerDependencies": {
