--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hardhat:node": "hardhat node",
     "lint": "concurrently 'pnpm:*:lint'",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
-    "pnpm:upgrade": "pnpm upgrade --recursive",
+    "pnpm:upgrade": "pnpm update --latest --recursive",
     "prepare": "husky install",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
@@ -64,7 +64,7 @@
     "commitlint": "^17.6.6",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.17.19",
+    "esbuild": "^0.18.11",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
@@ -79,25 +79,25 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "3.10.1",
+    "eslint-plugin-tailwindcss": "3.13.0",
     "git-cz": "^4.9.0",
     "hardhat": "^2.16.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "npm-package-json-lint": "^6.4.0",
-    "npm-package-json-lint-config-default": "^5.0.0",
+    "npm-package-json-lint": "^7.0.0",
+    "npm-package-json-lint-config-default": "^6.0.0",
     "postcss": "^8.4.25",
-    "prettier": "^2.8.8",
-    "release-it": "^15.11.0",
+    "prettier": "^3.0.0",
+    "release-it": "^16.1.0",
     "rimraf": "^5.0.1",
     "solhint": "^3.4.1",
-    "sort-package-json": "^1.57.0",
+    "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
-    "vercel": "^28.20.0",
+    "vercel": "^31.0.1",
     "viem": "^1.2.11",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0",
