--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,21 @@
   "editor.formatOnSave": true,
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "[json]": {
+  "[solidity]": {
     "editor.defaultFormatter": "JuanBlanco.solidity"
-  }
+  },
+  "eslint.workingDirectories": [
+    { "pattern": "apps/*/" },
+    { "pattern": "configurations/*/" },
+    { "pattern": "packages/*/" }
+  ],
+  // From: https://github.com/joe-bell/cva/discussions/85#discussioncomment-5014769
+  "tailwindCSS.experimental.classRegex": [
+    // enable autocomplete in cx(...)
+    ["cx\\(((?:[^()]|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+    // enable autocomplete in cva(...)
+    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+    ["cva\\(((?:[^()]|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
+  ],
+  "tailwindCSS.experimental.configFile": "configurations/tailwindcss/src/index.js"
 }
