--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,7 +19,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.8",
+    "@lightdotso/styles": "workspace:*",
+    "@lightdotso/ui": "workspace:*",
+    "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -27,13 +29,13 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^17.0.45",
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.24",
-    "tailwindcss": "3.3.2",
-    "typescript": "^4.9.5"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   },
   "publishConfig": {
     "access": "public"
