--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hardhat:node": "hardhat node",
     "lint": "concurrently 'pnpm:*:lint'",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
-    "pnpm:upgrade": "pnpm upgrade --recursive",
+    "pnpm:upgrade": "pnpm update --latest --recursive",
     "prepare": "husky install",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
@@ -43,6 +43,7 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
+    "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-foundry": "^1.0.2",
@@ -50,8 +51,9 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@release-it/keep-a-changelog": "^3.1.0",
+    "@swc/core": "^1.3.68",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.4.0",
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -62,9 +64,9 @@
     "commitlint": "^17.6.6",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.17.19",
+    "esbuild": "^0.18.11",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.8",
+    "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "^1.10.7",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -77,25 +79,26 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "3.10.1",
+    "eslint-plugin-tailwindcss": "3.13.0",
     "git-cz": "^4.9.0",
     "hardhat": "^2.16.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "npm-package-json-lint": "^6.4.0",
-    "npm-package-json-lint-config-default": "^5.0.0",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "release-it": "^15.11.0",
+    "npm-package-json-lint": "^7.0.0",
+    "npm-package-json-lint-config-default": "^6.0.0",
+    "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
+    "release-it": "^16.1.0",
     "rimraf": "^5.0.1",
     "solhint": "^3.4.1",
-    "sort-package-json": "^1.57.0",
+    "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
+    "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
-    "vercel": "^28.20.0",
-    "viem": "^1.2.10",
+    "vercel": "^31.0.1",
+    "viem": "^1.2.11",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0",
     "vitest-solidity-coverage": "^0.1.3"
