--- a/apps/ui/turbo.json
+++ b/apps/ui/turbo.json
@@ -3,7 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "outputs": ["public/**"],
+      "outputs": ["dist/**"],
       "dependsOn": ["^build"]
     },
     "dev": {
