--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "desktop"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["Light, Inc."]
-license = "GPL-3.0"
+license = "AGPL-3.0-or-later"
 repository = "https://github.com/LightDotSo/LightDotSo"
 edition = "2021"
 
