--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/LightDotSo/LightDotSo.git"
   },
-  "license": "GPL-3.0",
+  "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "main": "./index.tsx",
   "types": "./index.tsx",
