--- a/packages/resources/package.json
+++ b/packages/resources/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/LightDotSo/LightDotSo.git"
   },
-  "license": "GPL-3.0",
+  "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
     "build": "pnpm run build:locales && pnpm run build:images",
