--- a/deny.toml
+++ b/deny.toml
@@ -28,8 +28,7 @@ allow = [
     "MPL-2.0",
     "CC0-1.0",
     "Apache-2.0 WITH LLVM-exception",
-    "GPL-3.0-or-later",
-    "AGPL-3.0-or-later"
+    "GPL-3.0"
 ]
 deny = []
 exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
