--- a/deny.toml
+++ b/deny.toml
@@ -19,7 +19,7 @@ unknown-git = "deny"
 [licenses]
 unlicensed = "deny"
 allow-osi-fsf-free = "neither"
-copyleft = "deny"
+copyleft = "allow"
 confidence-threshold = 0.93
 allow = [
     "Apache-2.0",
@@ -28,7 +28,8 @@ allow = [
     "MPL-2.0",
     "CC0-1.0",
     "Apache-2.0 WITH LLVM-exception",
-    "GPL-3.0"
+    "GPL-3.0",
+    "AGPL-3.0",
 ]
 deny = []
 exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
