--- a/ios/package.json
+++ b/ios/package.json
@@ -13,7 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "echo 'Empty build script for turborepo trigger'",
+    "build": "exit 0",
     "swift-format:cmd": "mint run swift-format --in-place --recursive --parallel --ignore-unparsable-files",
     "swift-format:fix": "mint run swift-format --in-place --recursive --parallel --ignore-unparsable-files ios/**/Sources/**",
     "swift-format:lint": "mint run swift-format --recursive --parallel --ignore-unparsable-files ios/**/Sources/**",
