--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "solhint:cmd": "solhint 'contracts/**/*.sol'",
     "solhint:fix": "solhint 'contracts/**/*.sol' --fix",
     "solhint:lint": "solhint 'contracts/**/*.sol'",
-    "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages}/**/package.json'",
+    "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json'",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "wagmi:generate": "wagmi generate"
@@ -41,6 +41,11 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@commitlint/config-conventional": "^17.6.6",
+    "@evmts/config": "^0.1.0",
+    "@evmts/core": "^0.3.0",
+    "@evmts/ts-plugin": "^0.3.0",
+    "@evmts/vite-plugin": "^0.3.0",
+    "@evmts/webpack-plugin": "^0.3.0",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
@@ -50,6 +55,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@openzeppelin/contracts": "^4.9.2",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@swc/core": "^1.3.68",
     "@types/jest": "^29.5.2",
@@ -99,6 +105,7 @@
     "typescript": "^5.1.6",
     "vercel": "^31.0.1",
     "viem": "^1.2.11",
+    "vite": "^4.4.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0",
     "vitest-solidity-coverage": "^0.1.3"
