--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,11 +29,7 @@
     "strictNullChecks": true,
     "target": "es2020",
     "types": ["node", "jest"],
-    "lib": ["dom", "esnext"],
-    "paths": {
-      "@/artifacts/*": ["artifacts/*"],
-      "@/contracts/*": ["contracts/spec/*"]
-    }
+    "lib": ["dom", "esnext"]
   },
   "exclude": ["_"],
   "typeAcquisition": {
