--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,23 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true,
-    "noUncheckedIndexedAccess": true
+    "plugins": [
+      {
+        "name": "@evmts/ts-plugin",
+        "deployments": [
+          {
+            "name": "WagmiMintExample",
+            "addresses": {
+              "31337": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+            }
+          }
+        ],
+        "solcVersion": "0.8.18"
+      }
+    ],
+    "paths": {
+      "@/artifacts/*": ["artifacts/*"],
+      "@/contracts/*": ["contracts/spec/*"]
+    }
   },
   "extends": "./tsconfig.base"
 }
