--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,7 +23,7 @@ jobs:
           workspace: "@lightdotso/crates"
   docker-build:
     runs-on: ubuntu-latest
-    if: needs.docker-turbo.outputs.trigger == 'true' || startsWith(github.ref, 'refs/tags/@lightdotso/bin')
+    if: needs.docker-turbo.outputs.trigger == 'true' && github.event_name != 'release' || startsWith(github.ref, 'refs/tags/@lightdotso/bin') && github.event_name == 'release'
     needs:
       - docker-turbo
     timeout-minutes: 90
