--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   k8s-wait-docker:
-    if: github.event_name == 'push' || startsWith(github.ref, 'refs/tags/@lightdotso/bin')
+    if: github.event_name == 'push' || startsWith(github.ref, 'refs/tags/@lightdotso/bin') && github.event_name == 'release'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
