chore: ini license check

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "hardhat:compile": "hardhat compile",
     "hardhat:compile:coverage": "hardhat compile-for-coverage",
     "hardhat:node": "hardhat node",
+    "license:cmd": "license-check-and-add -f .license-check-and-add-config.json",
+    "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
+    "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently 'pnpm:*:lint'",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
     "pnpm:upgrade": "pnpm update --latest --recursive",
@@ -83,6 +86,7 @@
     "git-cz": "^4.9.0",
     "hardhat": "^2.16.1",
     "husky": "^8.0.3",
+    "license-check-and-add": "^4.0.5",
     "lint-staged": "^13.2.3",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
