--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -101,6 +101,12 @@
         "prepend": "// "
       },
       "append": ""
+    },
+    "sh": {
+      "eachLine": {
+        "prepend": "# "
+      },
+      "append": ""
     }
   },
   "trailingWhitespace": "TRIM"
