--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,13 @@
         "name": "@evmts/ts-plugin",
         "deployments": [
           {
-            "name": "WagmiMintExample",
+            "name": "LightWallet",
             "addresses": {
               "31337": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
             }
           }
         ],
+        "forge": true,
         "solcVersion": "0.8.18"
       }
     ],
