feat: ini evmts (#147)
* chore: fix

* feat: ini evmts

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,25 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true,
-    "noUncheckedIndexedAccess": true
+    "plugins": [
+      {
+        "name": "@evmts/ts-plugin",
+        "deployments": [
+          {
+            "name": "LightWallet",
+            "addresses": {
+              "31337": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+            }
+          }
+        ],
+        "forge": true,
+        "solcVersion": "0.8.18"
+      }
+    ],
+    "paths": {
+      "@/artifacts/*": ["artifacts/*"],
+      "@/contracts/*": ["contracts/src/*"],
+      "@/contracts/spec/*": ["contracts/spec/*"]
+    }
   },
   "extends": "./tsconfig.base"
 }
