feat: migrate spec dir

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -18,8 +18,7 @@
     "test-hh": "cd .. && pnpm run hardhat:test"
   },
   "dependencies": {
-    "@lightdotso/wagmi": "workspace:*",
-    "ethers": "^6.6.2"
+    "@lightdotso/wagmi": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
