--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@/artifacts/*": ["artifacts/*"],
       "@/contracts/*": ["contracts/src/*"],
-      "@/contracts/spec/*": ["contracts/spec/*"]
+      "@/contracts/spec/*": ["contracts/test/spec/*"]
     }
   },
   "extends": "./tsconfig.base"
