--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@openzeppelin/contracts": "^4.9.2",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@swc/core": "^1.3.68",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
@@ -77,6 +78,7 @@
     "commitlint": "^17.6.6",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "esbuild": "^0.18.11",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
@@ -108,6 +110,7 @@
     "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
+    "tslib": "^2.6.0",
     "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
