--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@viem/anvil": "0.0.6",
+    "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "@wagmi/cli": "^1.3.0",
     "autoprefixer": "^10.4.14",
