--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "forge:snapshot:cmd": "forge snapshot && echo",
     "hardhat:compile": "hardhat compile",
     "hardhat:compile:coverage": "hardhat compile-for-coverage",
-    "hardhat:node": "hardhat node",
     "license:cmd": "license-check-and-add -f .license-check-and-add-config.json",
     "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently 'pnpm:*:lint'",
-    "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
+    "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
     "pnpm:upgrade": "pnpm update --latest --recursive",
     "prepare": "husky install",
     "prettier:cmd": "prettier",
@@ -37,7 +36,9 @@
     "solhint:lint": "solhint 'contracts/**/*.sol'",
     "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json'",
     "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest --coverage --single-thread",
+    "test:typecheck": "vitest typecheck",
+    "test:ui": "vitest dev --ui",
     "wagmi:generate": "wagmi generate"
   },
   "devDependencies": {
@@ -61,18 +62,23 @@
     "@openzeppelin/contracts": "^4.9.2",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@swc/core": "^1.3.68",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "@viem/anvil": "0.0.6",
+    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/ui": "^0.33.0",
     "@wagmi/cli": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
     "commitlint": "^17.6.6",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "esbuild": "^0.18.11",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
@@ -104,6 +110,7 @@
     "sort-package-json": "^2.5.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
+    "tslib": "^2.6.0",
     "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
