chore: ini eslint rc

--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -50,6 +50,8 @@
     "*.toml",
     "*.txt",
     "*.yml",
+    "apps/extension/**/*.js",
+    "ios/LightWalletSafariExtension/Resources/**/*.js",
     "**/*.app/**",
     "**/.cargo/**",
     "**/.changeset/**",
