--- a/configurations/eslint/package.json
+++ b/configurations/eslint/package.json
@@ -12,12 +12,27 @@
   },
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
-  "main": "index.js",
+  "main": "src/index.js",
+  "files": [
+    "src/index.js"
+  ],
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "^1.10.7",
-    "eslint-plugin-react": "7.32.2"
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-editorconfig": "^4.0.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsonc": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "5.0.0-alpha.2",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-tailwindcss": "3.6.2"
   },
   "publishConfig": {
     "access": "restricted"
