--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Light, Inc.",
   "scripts": {
     "build": "turbo run build",
+    "build:turbo": "turbo run build",
     "changeset": "changeset",
     "fix": "concurrently 'pnpm:*:fix'",
     "forge:fmt:cmd": "forge fmt",
@@ -24,6 +25,7 @@
     "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently 'pnpm:*:lint'",
+    "lint:turbo": "turbo run lint",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
     "pnpm:upgrade": "pnpm update --latest --recursive",
     "prepare": "husky install",
@@ -47,9 +49,9 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@evmts/config": "^0.2.1",
     "@evmts/core": "^0.3.1",
-    "@evmts/ts-plugin": "^0.4.1",
-    "@evmts/vite-plugin": "^0.4.1",
-    "@evmts/webpack-plugin": "^0.4.1",
+    "@evmts/ts-plugin": "^0.4.2",
+    "@evmts/vite-plugin": "^0.4.2",
+    "@evmts/webpack-plugin": "^0.4.2",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
@@ -63,12 +65,12 @@
     "@release-it/keep-a-changelog": "^3.1.0",
     "@swc/core": "^1.3.68",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@viem/anvil": "0.0.6",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
@@ -90,7 +92,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "5.0.0-alpha.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -114,9 +116,9 @@
     "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
-    "vercel": "^31.0.1",
-    "viem": "^1.2.12",
-    "vite": "^4.4.2",
+    "vercel": "^31.0.2",
+    "viem": "^1.2.13",
+    "vite": "^4.4.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0",
     "vitest-solidity-coverage": "^0.1.3"
