--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "build": "turbo run build",
     "build:turbo": "turbo run build",
     "changeset": "changeset",
+    "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
+    "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
+    "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "fix": "concurrently 'pnpm:*:fix'",
     "forge:fmt:cmd": "forge fmt",
     "forge:snapshot:cmd": "forge snapshot && echo",
@@ -106,6 +109,8 @@
     "npm-package-json-lint-config-default": "^6.0.0",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "release-it": "^16.1.0",
     "rimraf": "^5.0.1",
     "solhint": "^3.4.1",
