--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "Light, Inc.",
   "scripts": {
     "build": "turbo run build",
+    "build:turbo": "turbo run build",
     "changeset": "changeset",
+    "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
+    "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
+    "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "fix": "concurrently 'pnpm:*:fix'",
     "forge:fmt:cmd": "forge fmt",
     "forge:snapshot:cmd": "forge snapshot && echo",
@@ -24,6 +28,7 @@
     "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently 'pnpm:*:lint'",
+    "lint:turbo": "turbo run lint",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages ./pods",
     "pnpm:upgrade": "pnpm update --latest --recursive",
     "prepare": "husky install",
@@ -47,9 +52,9 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@evmts/config": "^0.2.1",
     "@evmts/core": "^0.3.1",
-    "@evmts/ts-plugin": "^0.4.1",
-    "@evmts/vite-plugin": "^0.4.1",
-    "@evmts/webpack-plugin": "^0.4.1",
+    "@evmts/ts-plugin": "^0.4.2",
+    "@evmts/vite-plugin": "^0.4.2",
+    "@evmts/webpack-plugin": "^0.4.2",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
@@ -63,12 +68,12 @@
     "@release-it/keep-a-changelog": "^3.1.0",
     "@swc/core": "^1.3.68",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@viem/anvil": "0.0.6",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
@@ -90,7 +95,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -104,6 +109,8 @@
     "npm-package-json-lint-config-default": "^6.0.0",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "release-it": "^16.1.0",
     "rimraf": "^5.0.1",
     "solhint": "^3.4.1",
@@ -114,9 +121,9 @@
     "tsup": "^7.1.0",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
-    "vercel": "^31.0.1",
-    "viem": "^1.2.12",
-    "vite": "^4.4.2",
+    "vercel": "^31.0.2",
+    "viem": "^1.2.13",
+    "vite": "^4.4.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0",
     "vitest-solidity-coverage": "^0.1.3"
