--- a/packages/solutions/package.json
+++ b/packages/solutions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lightdotso/solution",
+  "name": "@lightdotso/solutions",
   "version": "0.1.0",
   "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
