--- a/packages/solutions/tsconfig.json
+++ b/packages/solutions/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "target": "ES2020",
+    "lib": ["ES2020.BigInt"]
   },
   "exclude": ["dist", "build", "node_modules"],
   "extends": "@lightdotso/tsconfig/node.json",
