--- a/packages/solutions/tsconfig.json
+++ b/packages/solutions/tsconfig.json
@@ -6,5 +6,5 @@
   },
   "exclude": ["dist", "build", "node_modules"],
   "extends": "@lightdotso/tsconfig/node.json",
-  "include": ["."]
+  "include": ["src"]
 }
