feat: refactor storybook ui

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -41,7 +41,6 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@mdx-js/react": "^2.3.0",
     "@storybook/addon-actions": "^7.0.27",
     "@storybook/addon-backgrounds": "^7.0.27",
     "@storybook/addon-docs": "^7.0.27",
@@ -55,7 +54,7 @@
     "@storybook/channel-postmessage": "^7.0.27",
     "@storybook/channel-websocket": "^7.0.27",
     "@storybook/client-api": "^7.0.27",
-    "@storybook/mdx2-csf": "^1.1.0",
+    "@storybook/nextjs": "^7.0.27",
     "@storybook/preview-api": "7.0.26",
     "@storybook/preview-web": "^7.0.27",
     "@storybook/react": "^7.0.27",
