feat: refactor storybook ui (#167)
* chore: ini solution test

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* feat: refactor storybook ui

* chore: update

* chore: update

* chore: update

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "lucide-react": "^0.259.0",
+    "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.13.2",
@@ -41,7 +42,6 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@mdx-js/react": "^2.3.0",
     "@storybook/addon-actions": "^7.0.27",
     "@storybook/addon-backgrounds": "^7.0.27",
     "@storybook/addon-docs": "^7.0.27",
@@ -55,7 +55,7 @@
     "@storybook/channel-postmessage": "^7.0.27",
     "@storybook/channel-websocket": "^7.0.27",
     "@storybook/client-api": "^7.0.27",
-    "@storybook/mdx2-csf": "^1.1.0",
+    "@storybook/nextjs": "^7.0.27",
     "@storybook/preview-api": "7.0.26",
     "@storybook/preview-web": "^7.0.27",
     "@storybook/react": "^7.0.27",
