--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": []
+      "inputs": ["!package.json"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -16,8 +16,11 @@
       "persistent": true
     },
     "//#build:test": {
-      "outputs": ["artifacts/**", "coverage-data.json"],
-      "inputs": ["contracts/src/**"]
+      "outputs": [
+        "artifacts/**",
+        "coverage-data.json",
+        "packages/solutions/dist/**"
+      ]
     },
     "//#ci": {
       "cache": false
