--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -94,6 +94,10 @@
       },
       "append": ""
     },
+    "mdx": {
+      "prepend": "{/*",
+      "append": "*/}\n"
+    },
     "sh": {
       "eachLine": {
         "prepend": "# "
