chore: ini tailwind indicator

--- a/apps/ui/turbo.json
+++ b/apps/ui/turbo.json
@@ -3,6 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "env": ["NODE_ENV"],
       "outputs": ["dist/**"],
       "dependsOn": ["^build"]
     },
