--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -65,5 +65,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker
+          allowed-skips: fly-wait-docker,fly-deploy-serve,fly-deploy-indexer
           jobs: ${{ toJSON(needs) }}
