--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ strip = true
 [workspace.dependencies]
 anyhow = "1.0.71"
 axum = "0.6.18"
+lightdotso-tracing = { path = "./crates/tracing" }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = [
