--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,4 @@
 cli= ["run", "--"]
 scopelint = ["run", "--package", "embedded-scopelint", "--"]
 uniffi-bindgen = ["run", "--package", "embedded-uniffi-bindgen", "--"]
+test-all = ["test", "--workspace"]
